큰따옴표 띄어쓰기 오류, 화살표 수정

--- a/06_남부지방 권역.md
+++ b/06_남부지방 권역.md
@@ -14,7 +14,7 @@
 ### 대전광역시
 대전을 정치성향 기준으로 두 권역으로 나누자면, 대전을 동서로 나누며 지나가는 유등천이 그 경계가 된다. 동대전은 개화기에 경부선 대전역의 탄생과 함께 발전한 원도심이고, 서대전은 1970년대부터 대덕연구단지와 정부대전청사를 기반으로 발전한 신도시다. 두 지역의 개발 격차는 소득과 교육과 인구연령의 격차로 확대되었는데, 이것이 그대로 정치성향의 차이로 발전한 셈이다. 2012년과 2016년 총선에서는 민주당계 정당과 보수주류 정당이 유등천을 기준으로 정확하게 동/서대전을 나누어 가져서, 두 당이 3:3 또는 4:3석으로 동률을 이뤘다. 
 
-보수주류 정당 입장에서 이는 엄청난 발전이다. 1988년부터 2008년까지 6번의 총선에서 보수주류 정당은 대전에서 전체 35석 중 단 2석만 승리했는데, 그나마 그 중 한 번인 `김원웅(대덕구: 1992~ 96, 2000~ 08)`은 민주당계 정치인이 당이 합당되어 보수주류 정당(한나라당)으로 넘어왔다가 이내 민주당계 정당(개혁국민신당->열린우리당)으로 돌아간 경우였다. 보수주류 정당이 2012년부터 약진을 하는 계기는, 대전 최다선 `강창희(중구: 1985~ 88, 92~ 2004, 12~ 16)`의 예에서 보듯 충청권 제3정당에 몸담았던 인물들이 보수주류 정당으로 합류하면서 세가 커진 것, 그리고 (보수주류 정당이 그나마 힘을 썼던)지방선거를 통해 입성한 정치인이 국회의원으로 성장한 것이었다. 강창희를 제외한 나머지 보수주류 정당(새누리당)의 국회의원 4명(`이장우(동구: 2012~ )`, `이은권(중구: 2016~ )`, `박성효(대덕구: 2012~ 14)`, `정용기(대덕구: 2014~ )`)는 모두 그 이전에 대전시장 또는 해당 지역구 구청장으로 당선된 바 있다.
+보수주류 정당 입장에서 이는 엄청난 발전이다. 1988년부터 2008년까지 6번의 총선에서 보수주류 정당은 대전에서 전체 35석 중 단 2석만 승리했는데, 그나마 그 중 한 번인 `김원웅(대덕구: 1992~ 96, 2000~ 08)`은 민주당계 정치인이 당이 합당되어 보수주류 정당(한나라당)으로 넘어왔다가 이내 민주당계 정당(개혁국민신당→열린우리당)으로 돌아간 경우였다. 보수주류 정당이 2012년부터 약진을 하는 계기는, 대전 최다선 `강창희(중구: 1985~ 88, 92~ 2004, 12~ 16)`의 예에서 보듯 충청권 제3정당에 몸담았던 인물들이 보수주류 정당으로 합류하면서 세가 커진 것, 그리고 (보수주류 정당이 그나마 힘을 썼던)지방선거를 통해 입성한 정치인이 국회의원으로 성장한 것이었다. 강창희를 제외한 나머지 보수주류 정당(새누리당)의 국회의원 4명(`이장우(동구: 2012~ )`, `이은권(중구: 2016~ )`, `박성효(대덕구: 2012~ 14)`, `정용기(대덕구: 2014~ )`)는 모두 그 이전에 대전시장 또는 해당 지역구 구청장으로 당선된 바 있다.
 
 그간 대전의 보수적 표심을 대표한 것은 보수주류 정당이 아니라, 보수적 성향의 충청권 제3정당이었다. 충청권 제3정당 보수주류 정당(민주자유당)에 흡수되어 없었던 1992년을 제외하고, 1988~ 2008년 사이의 5번 총선에서 30석 중 19석을 승리했고, 1992년 총선에서도 보수주류 정당(1석)보다 더 많은 의석(2석)이 무소속의 승리로 돌아갔다. 다만 이것만 두고 대전의 표심이 보수적이라고 단정짓기도 어렵다. 2004년 민주당계 정당의 전승(열린우리당: 6석 중 6석)과 2008년 충청권 제3정당의 압승(자유선진당: 6석 중 5석)은 모두 충청권 행정수도 사업을 추진(노무현 행정부)하거나 반대(이명박 대통령의 서울시장 재임 시절)하려는 시도와 연관되어 있으며, 이 때 당적을 열린우리당에서 자유선진당으로 옮기며 두 번 모두 승리한 `권선택(중구: 2004~ 2012)`과 `이상민(유성구: 2004~ )`의 예시도 있다. 대전의 표심은 보수적이었다기 보다, 대전과 충청에 가장 이익이 될 정당, 또는 그 이익을 가장 잘 대변할 정치인을 잘 지켜주는 정당(?)으로 몰렸다고 보아야 할 것이다. 
 
@@ -119,7 +119,7 @@
 #### 전북 남원시-임실군-순창군
 **후보들에겐 슬픈 전설이 있어 (1)**
 
-2016년 총선에서 `가장 많은 후보(8명)(“정치 1번지”라는 상징성 때문에 모든 정당이 왠만하면 꼭 출마하는 서울 종로구(10명)는 제외한다.)`가 출마한 첫 번째 지역구는 남원-임실-순창이다. 이 지역구에는 2012년 총선(당시 “남원시-순창군 ” 지역구)의 양강 후보였던 이강래와 강동원의 슬픈 전설이 담겨있다. 
+2016년 총선에서 `가장 많은 후보(8명)(“정치 1번지”라는 상징성 때문에 모든 정당이 왠만하면 꼭 출마하는 서울 종로구(10명)는 제외한다.)`가 출마한 첫 번째 지역구는 남원-임실-순창이다. 이 지역구에는 2012년 총선(당시 “남원시-순창군” 지역구)의 양강 후보였던 이강래와 강동원의 슬픈 전설이 담겨있다. 
 2012년 총선에서, 당시 현역 3선의원이던 민주당계(민주통합당) 이강래와 국회의원 첫 출마인 사민주의 정당(통합진보당) 강동원이 맞붙었고, 여기서 강동원이 승리하여 당시에는 이변으로 받아들여졌다. 그러나 2014년, 강동원이 돌연 사민주의 정당(정의당)을 탈당하고, 안철수가 추진하던 신당에 합류하려다가 안철수와 함께 민주당계 정당(새정치민주연합)에 입당한다. 2016년 총선 직전, 이강래는 강동원을 피해 서울 서대문구 을로 지역구를 옮기지만 경선에서 패배한다. 한편 강동원은 그대로 남원-임실-순창에 출마하지만 경선에서 컷오프당하고, 이에 반발해 무소속으로 출마한다. 가장 강력한 후보 2명이 이렇게 모두 민주당계 정당을 떠나자, 그 기회를 노린 후보들이 쏟아져 나온다. 2016년의 승리자는 국민의당의 이용호.
 
 그리고 2020년, 이번에는 현역 이용호가 무소속으로 출마하며, 이강래는 `한국도로공사 사장(그가 사장으로 재임하던 시절 한국도로공사에서 일어난 사건이 있다. 3권 ‘위원회와 주요 이슈 (1)’, p.XXX 참고.)`을 역임하다가 다시 남원-임실-순창으로 복귀, 더불어민주당으로 출마한다. 강동원은 불출마를 선언한다. 
@@ -134,9 +134,9 @@
 #### 전북 전주시 을, 전남 순천시-광양시-곡성군-구례군 갑
 **오늘의 관광코스: 새누리당의 유적지**
 
-새누리당(보수주류 정당)이 200석도 차지할 수 있다고들 예상했던 2016년 총선(실제 122석)에서, 새누리당은 전라권에서 만큼은 지역구를 2석이나 확보하는 큰 성과를 거뒀다. 그 이후의 정치지형 급변으로 인해, 당시 승리 지역구인 전주 을과 `순천-광양-곡성-구례 갑(2016년 당시 “순천시 ” 지역구. 인구변동으로 인해 2020년 총선에서는 해룡면을 제외한 순천시 일원을 ‘갑’, 해룡면을 광양-곡성-구례와 합쳐서 ‘을’ 지역구로 개편된다.)`은 현역 의원(정운천, 이정현)이 모두 해당 지역에서 불출마한다. 여러가지 이유가 있겠지만, 재선의 가능성이 낮다는 것이 가장 큰 문제였을 것이다. 
+새누리당(보수주류 정당)이 200석도 차지할 수 있다고들 예상했던 2016년 총선(실제 122석)에서, 새누리당은 전라권에서 만큼은 지역구를 2석이나 확보하는 큰 성과를 거뒀다. 그 이후의 정치지형 급변으로 인해, 당시 승리 지역구인 전주 을과 `순천-광양-곡성-구례 갑(2016년 당시 “순천시” 지역구. 인구변동으로 인해 2020년 총선에서는 해룡면을 제외한 순천시 일원을 ‘갑’, 해룡면을 광양-곡성-구례와 합쳐서 ‘을’ 지역구로 개편된다.)`은 현역 의원(정운천, 이정현)이 모두 해당 지역에서 불출마한다. 여러가지 이유가 있겠지만, 재선의 가능성이 낮다는 것이 가장 큰 문제였을 것이다. 
 
-이 빈자리의 표심이 어떻게 이동할 것인지는 중요하다. 2016년 당시를 기준으로 보자면, 새누리당을 향한 표심은 우파적 성향이라기보다는, “더불어민주당 후보를 떨어뜨릴 수 있는 후보 ”에게 향한 표심이었다고 보아야 할 것 같다. 전북/전남에서 더불어민주당 후보들이 대체로 35~ 45%의 득표율을 올렸던 경향은 해당 지역구에서도 유사하게 이뤄졌지만, 전북/전남에서 국민의당 후보들이 대체로 얻었던 득표율(40~ 50%)과 비교할 때 해당 지역구 국민의당 후보의 득표율은 턱없이 적다. 
+이 빈자리의 표심이 어떻게 이동할 것인지는 중요하다. 2016년 당시를 기준으로 보자면, 새누리당을 향한 표심은 우파적 성향이라기보다는, “더불어민주당 후보를 떨어뜨릴 수 있는 후보”에게 향한 표심이었다고 보아야 할 것 같다. 전북/전남에서 더불어민주당 후보들이 대체로 35~ 45%의 득표율을 올렸던 경향은 해당 지역구에서도 유사하게 이뤄졌지만, 전북/전남에서 국민의당 후보들이 대체로 얻었던 득표율(40~ 50%)과 비교할 때 해당 지역구 국민의당 후보의 득표율은 턱없이 적다. 
 
 
 ## 제주특별자치도
@@ -182,7 +182,7 @@
 경상북도에 비해서 상대적으로 정당의 다양성이 풍부한 대구를 통해, 보수적이고 우파를 지향하는 표심이 어떻게 분화될 수 있는지 살펴볼 수 있다. 2016년에 당선된 국회의원들의 2018년 당시 당적을 기준으로 살펴보자. 
 대구의 도심부, 그리고 `박근혜(달성군: 1998~ 2012)`의 지역구였던 달성군에는 박근혜 행정부에서 청와대 수석비서관이나 행정부 장관(급)으로 일한 뒤 친박계의 등용으로 공천된 인물(`곽상도(중구·남구: 2016~ )`, `정종섭(동구 갑: 2016~ )`, `추경호(달성군: 2016~ )`)이 초선으로 공천되어 무난하게 당선되었고, 달성군 인근의 친-박근혜 극우정당(우리공화당)을 창당한 대선후보(`조원진(달서구 병: 2008~ )`)가 3선을 하고 있다. 이들은 모두 강력한 친박계로, 박근혜 대통령의 탄핵 이후에도 보수주류 정당(자유한국당)이나 극우정당에서 활동한다. 본래 대구를 거쳐간 중진 - `박준규(동구·중구·달성군: 1960~ 61, 71~ 80, 88~ 2000)`, `박철언(수성구 갑: 1992~ 2000)`, `홍사덕(서구: 2008~ 12)` - 들이 과거 군사정권에 참여하거나 친박계의 중심인물로 활약했음을 감안하면, 대구는 보수주류 정당, 특히 당내 전통적 보수세력이 언제나 공들여서 의원을 키워내는 인큐베이터 역할을 했다고 볼 수 있다.   
 
-그러나 그 반대편의 대구 북동부를 살펴보면, 보수개혁 정당(바른정당->바른미래당)의 핵심 중진이었던 `유승민(동구 을: 2005~ 20)`, `주호영(수성구 을: 2004~ )`, 그리고 민주당계 정당(더불어민주당)의 `김부겸(수성구 갑: 2016~ )`, `홍의락(북구 을: 2016~ )`이 등장하여 그 성향이 극적으로 바뀐다. 이들의 지역구가 대구 안에서도 대표적인 부촌(수성구) 또는 대구 외곽의 위성도시와 함께 새로 개발되는 거주지와 공업단지로 이루어져 있다는 점이 주목할 만 하다. 사실 이 지역에서는 2004년 이후 민주당계 정당의 계속되는 도전이 있었다. 노무현 대통령의 청와대 특별보좌관으로 1988년부터 2005년까지 수성구, 중구, 동구에서 출마하여 최대 44%의 득표율을 올렸던 이강철, 새천년민주당 대표로 서울에서 5선을 했다가 2004년 수성구에서 도전한 조순형, 마찬가지로 경기 고양시의 재선 국회의원이었으나 2008년 수성구에 도전한 유시민 등. 몇십 년째 이어진 거물들의 꾸준한 출마는 대구의 보수적인 표심이 다른 정당들을 통해 표출될 통로 하나를 아주 천천히 만드는 기반이 되었다.  
+그러나 그 반대편의 대구 북동부를 살펴보면, 보수개혁 정당(바른정당→바른미래당)의 핵심 중진이었던 `유승민(동구 을: 2005~ 20)`, `주호영(수성구 을: 2004~ )`, 그리고 민주당계 정당(더불어민주당)의 `김부겸(수성구 갑: 2016~ )`, `홍의락(북구 을: 2016~ )`이 등장하여 그 성향이 극적으로 바뀐다. 이들의 지역구가 대구 안에서도 대표적인 부촌(수성구) 또는 대구 외곽의 위성도시와 함께 새로 개발되는 거주지와 공업단지로 이루어져 있다는 점이 주목할 만 하다. 사실 이 지역에서는 2004년 이후 민주당계 정당의 계속되는 도전이 있었다. 노무현 대통령의 청와대 특별보좌관으로 1988년부터 2005년까지 수성구, 중구, 동구에서 출마하여 최대 44%의 득표율을 올렸던 이강철, 새천년민주당 대표로 서울에서 5선을 했다가 2004년 수성구에서 도전한 조순형, 마찬가지로 경기 고양시의 재선 국회의원이었으나 2008년 수성구에 도전한 유시민 등. 몇십 년째 이어진 거물들의 꾸준한 출마는 대구의 보수적인 표심이 다른 정당들을 통해 표출될 통로 하나를 아주 천천히 만드는 기반이 되었다.  
 
 ### 경상북도 
 어쩌다 보니, 경북에서는 2010년대 보수주류 정권 치세의 상징과도 같은 인물들이 계속해서 등장했다. 이명박 대통령의 친형으로 당시 ‘실세’로 일컬어진 `이상득(포항시 남구-울릉군: 1988~ 2012)`, 2016년 국회 필리버스터의 발단이 되는 <국민보호와 공공안전을 위한 테러방지법>을 대표발의한 `이철우(김천시: 2008~ 18)`, 이명박-박근혜 행정부에서 모두 경제관련 부처 장관을 지낸 `최경환(경산시-청도군: 2004~ 19)`이 그 대표적인 인물들이다. 민주당계 정당 입장에서는 경상북도에서 후보를 구하는 것 조차 어렵고, 그나마 사민주의 정당이 무언가를 해보려고 해도 공업화 수준에 비해 노동자 조직이 너무 약해서 경남권에서와 같은 약진을 기대할 수 없었다. 이런 구도에서 경상북도 의원들은 보수정권 치세 동안, 낙선 걱정 없이 마음 편하게 자신의 ‘소신’을 밀어붙일 수 있었다. 
@@ -207,7 +207,7 @@
 #### 경북 포항시 북구
 **“경상북도 종로구”**
 
-경상북도 안에서도 서울의 종로구(5권 ‘중부지방 권역’, p.XXX 참고)와 같이 거물급만 출마하는 곳이 있으니, 포항 북구다. 전두환 보안사령관의 비서실장이자 전두환 행정부의 대통령비서실 비서실보좌관으로 `“실세 쓰리허 ”(허삼수 대통령비서실 사정수석비서관, 허문도 대통령비서실 공보비서관을 합하여, 전두환 행정부의 실세 3인을 가리킨 표현. 세 명 모두 전두환의 쿠데타 당시 전두환의 비서실장 또는 국군기무사 인사처장을 맡고 있었다.)`라고 불리운 허화평(1992~ 97), 포항제철 회장 박태준(97~ 2000), 국회부의장을 지낸 이병석(2000~ 16)이 포항 북구에서 국회의원을 지냈다. 
+경상북도 안에서도 서울의 종로구(5권 ‘중부지방 권역’, p.XXX 참고)와 같이 거물급만 출마하는 곳이 있으니, 포항 북구다. 전두환 보안사령관의 비서실장이자 전두환 행정부의 대통령비서실 비서실보좌관으로 `“실세 쓰리허”(허삼수 대통령비서실 사정수석비서관, 허문도 대통령비서실 공보비서관을 합하여, 전두환 행정부의 실세 3인을 가리킨 표현. 세 명 모두 전두환의 쿠데타 당시 전두환의 비서실장 또는 국군기무사 인사처장을 맡고 있었다.)`라고 불리운 허화평(1992~ 97), 포항제철 회장 박태준(97~ 2000), 국회부의장을 지낸 이병석(2000~ 16)이 포항 북구에서 국회의원을 지냈다. 
 
 특이하게도, 민주당계 정당과 사민주의 정당에서도 2008년 총선부터는 언제나 `경북도당위원장(한국의 정당은 <정당법>에 의해, 각 시·도별 지부인 광역시·도당을 설치하고 그 대표인 위원장을 둔다)`이 포항 북구에 출마했다. 오중기(2008/16 출마), 유성찬(2012 출마), 박창호(2016 출마) 세 명은 총선 당시 각 정당의 경북도당위원장 또는 부위원장을 맡고 있었고, 세 명 모두 도당위원장을 맡은 상태에서 경북도지사 선거에 출마한 이력도 가지고 있다. 2020년 총선에서 정의당(사민주의 정당)은 역사상 최초로 지역구 국회의원후보 경선을 치르게 되었는데, 그 지역구 역시 포항 북구였다. 
 
@@ -293,9 +293,9 @@
 #### 부산 부산진구 갑
 **부산 한가운데의 파란 깃발 선봉장**
 
-부산의 한가운데, 부산진 갑 선거구는 더불어민주당 부산시당에게 매우 각별한 상징성을 가진다. 이 지역구의 현역, 김영춘의 독특한 입지 때문이다. 부산 태생으로 민주당계 정당의 총재였던 김영삼의 비서로 들어가서 정치에 입문했고, 김영삼의 3당 합당에 환멸을 느끼며 대학원에 들어갔고, 김영삼의 “호랑이 굴에 들어가서 호랑이를 잡는 싸움을 도와달라 ”는 말에 다시 보수주류 정당으로 합류했으며, 서울(광진구 갑)에서 국회의원에 당선된 뒤 보수주류 정당의 개혁 가능성이 없다고 판단하고 `동료 의원 4명(이부영(탈당 당시, 서울 강동 갑), 이우재(서울 금천), 안영근(인천 남구 을), 김부겸(경기 군포). 김영춘까지 5인을 “독수리 5형제 ”라고 불렀다.)`과 민주당계 정당(열린우리당) 입당. 그리고 2012년 부산 출마를 선언하며 부산으로 이주. 2012년 보수주류 정당 후보(나성린, 새누리당)에게 약 4%p 차이로 (부산으로서는) 아깝게 낙선한 뒤, 2016년 같은 상대에게 3%p 차이고 어렵게 승리.
+부산의 한가운데, 부산진 갑 선거구는 더불어민주당 부산시당에게 매우 각별한 상징성을 가진다. 이 지역구의 현역, 김영춘의 독특한 입지 때문이다. 부산 태생으로 민주당계 정당의 총재였던 김영삼의 비서로 들어가서 정치에 입문했고, 김영삼의 3당 합당에 환멸을 느끼며 대학원에 들어갔고, 김영삼의 “호랑이 굴에 들어가서 호랑이를 잡는 싸움을 도와달라”는 말에 다시 보수주류 정당으로 합류했으며, 서울(광진구 갑)에서 국회의원에 당선된 뒤 보수주류 정당의 개혁 가능성이 없다고 판단하고 `동료 의원 4명(이부영(탈당 당시, 서울 강동 갑), 이우재(서울 금천), 안영근(인천 남구 을), 김부겸(경기 군포). 김영춘까지 5인을 “독수리 5형제”라고 불렀다.)`과 민주당계 정당(열린우리당) 입당. 그리고 2012년 부산 출마를 선언하며 부산으로 이주. 2012년 보수주류 정당 후보(나성린, 새누리당)에게 약 4%p 차이로 (부산으로서는) 아깝게 낙선한 뒤, 2016년 같은 상대에게 3%p 차이고 어렵게 승리.
 
-부산에서 태어나 김영삼의 직계로 정치를 배웠고, 서울에서 보수주류 정당을 경험한 후 민주당계 정당으로 합류한 뒤, 다시 부산에서 도전하여 부산 민주당 최다선 중진이 되기까지, 그 긴 과정을 통해 김영춘은 “김영삼의 정치철학이 부산에서 다시 민주당계 정당으로 돌아오는 ” 것을 보여주는 상징적인 인물로 자리잡았다. 그의 당락 자체가 곧 부산의 정치지형, 나아가 한국의 정치지형을 변화시킬 파급력있는 사건이 될 것이다. 
+부산에서 태어나 김영삼의 직계로 정치를 배웠고, 서울에서 보수주류 정당을 경험한 후 민주당계 정당으로 합류한 뒤, 다시 부산에서 도전하여 부산 민주당 최다선 중진이 되기까지, 그 긴 과정을 통해 김영춘은 “김영삼의 정치철학이 부산에서 다시 민주당계 정당으로 돌아오는” 것을 보여주는 상징적인 인물로 자리잡았다. 그의 당락 자체가 곧 부산의 정치지형, 나아가 한국의 정치지형을 변화시킬 파급력있는 사건이 될 것이다. 
 
 <!--#### 부산 사상구-->
 
