20200319_01_수정 (02_정당과 역사)

--- a/02_정당과 역사.md
+++ b/02_정당과 역사.md
@@ -2,71 +2,117 @@
 
 
 
-## (극히 주관적인) 정당 계보
-- 중앙선관위에 등록된 정당 개수	34개
-- 2020 총선에 예비후보를 등록한 정당 개수	17개 (이상 2020년 3월 일 현재)
-- 국회 의석을 가진 정당 개수	7? 8?개
-- 지방의회 의석을 가진 정당 개수	6?개
+## 극히 주관적인 정당 계보
+- 중앙선관위에 등록된 정당 개수	42개
+- 2020 총선에 예비후보를 등록한 정당 개수	16개 (이상 2020년 3월 15일 현재)
+- 국회 의석을 가진 정당 개수	9개
 
-2020년 3월 현재 한국 중앙선거관리위원회에 등록된 정당의 수는 34개, 창당준비위원회의 수는 11개입니다. 이합집산과 당명 변경이 잦은 한국 정당의 역사 속에서, 모든 정당의 기원과 계통을 분류하기 위해서는 매우 오랜 학술연구가 필요합니다. 짧은 내용에서 45개 정치단체를 모두 다룰 수는 없기에, 이 책에서는 2020년 3월 현재 국회와 지방의회의 정당 구성에 맞춰, (1)국회 또는 지방의회에 의석을 보유한 정당, 또는 (2)정강정책의 큰 변화 없이 2016년 국회의원 총선거와 2018년 지방선거에 모두 후보를 낸 정당을 중심으로 분류할 것입니다. 각 계통별로 1988년부터 역대 총선거 및 2018년 지방선거에서의 정당명, 그리고 이 책에서 표기할 정당 색상을 소개합니다. 이 책에서 등장하는 계통의 이름은 일반적으로 쓰이는 명칭이나 학술용어는 아닙니다.
+2020년 3월 15일 현재 한국 중앙선거관리위원회에 등록된 정당의 수는 42개, 창당준비위원회의 수는 34개입니다. 이합집산과 당명 변경이 잦은 한국 정당의 역사 속에서, 모든 정당의 기원과 계통을 분류하기 위해서는 매우 오랜 학술연구가 필요합니다. 짧은 내용에서 76개 정치단체를 모두 다룰 수는 없기에, 이 책에서는 2020년 3월 15일 현재 국회와 지방의회의 정당 구성에 맞춰, (1)국회 또는 지방의회에 의석을 보유한 적 있는 정당 및 그 후신, 또는 (2)정강정책의 큰 변화 없이 2016년 국회의원 총선거 또는 2018년 지방선거에 후보를 낸 정당을 중심으로 분류할 것입니다. 각 계통별로 1988년부터 역대 총선거 및 2018년 지방선거에서의 정당명, 그리고 이 책에서 표기할 정당 색상을 소개합니다. 이 책에서 등장하는 계통의 이름은 일반적으로 쓰이는 명칭이나 학술용어는 아닙니다.
+
+한편 선거일 30일 전까지도 창당이 완료되지 않는 정당은 정치단체로서 충분한 조직을 갖추었다고 판단하기 어려워, 현재 소개하는 정당들은 2020년 3월 15일 현재 상황에 맞추어 소개합니다. 각종 비례연합정당의 등장 및 공천결과 변경 등으로 인해, 원고 마감 이후 내용이 달라졌을 수 있습니다.
 
 - 민주당계 정당
 - 보수주류 정당
-- 충청권 제3정당
-- 신중도 정당
-- 신보수 정당
-- (민주당계 전라권 제3정당
-- 진보정당 1: 사민주의 정당
-- 진보정당 2: 민족주의 좌파 정당
-- 진보정당 3: 노동당계 정당
-- 진보정당 4: 녹색당(계 정당)
-- 친-박근혜 극우 정당
-- 그 외 극우/종교정당
-
-## 지금까지의 국회의원 총선거
+- 제3세력 정당
+- 사민주의(사회민주주의) 진보정당
+- 극우계열 정당
+- 종교계열 정당
+- 신진 진보정당
 
 ## 민주당계 정당 
+**연속성으로 따지면 한국에서 가장 오래된 정당, 2020년의 집권당. 그들이 '주류'로 인정받기 위해 규모를 키우는 과정에서, 한국 정치는 가치관의 선명함을 희생하여 역동성을 얻게 된다.
 
+정당의 창당 시점과 지도부의 연속성만으로 따지면, 한국에서 가장 오래된 정당은 민주당계 정당이다. 한국의 광복 및 정부수립 시기에 창당하여 미군정(1945~ 48) 시기의 각종 사무에 참여해 실질적인 집권당 역할을 했던 정당들 - 한국민주당, 민주국민당, 대한여자국민당 등 - 이 현재 민주당계 정당의 근원이다. 이들은 주로 독립운동에 참여하거나 해외 유학을 다녀온 지주/자본가 계층 인물들이 많았으며, 반공과 보수우파라는 정체성에서는 당시 집권당인 자유당과 큰 차이가 없었다. 이들이 본격적으로 반-독재, 반-보수주류 정당의 태도를 가지는 것은 1955년에 '민주당'을 창당한 때 부터다. 1954년 자유당(보수주류 정당)이 이승만의 종신집권을 가능하게 하는 `헌법개정("이 헌법공포 당시의 대통령에 대해서는 연임제한 규정을 적용하지 않는다"는 부칙을 삽입했다.)`을 통과시키자, 이에 반대하는 모든 세력이 하나의 정당으로 모인 것이다. 다만 이 때에도 조봉암을 비롯한 사민주의 세력의 참여는 받아들여지지 않았고(p. XXX 참조), 민주당은 정치에서의 자유주의와 사회경제정책의 보수성을 담은 '리버럴' 정당이 되었다. 
 
-여기에 보수주류 정당의 집권기에는, 행정부 차원에서 사상의 다양성을 인정하지 않는 정책(한국사 교과서 국정화, 
+이후 민주당계 정당의 인적구성은, 당 바깥에서 (당시 기준으로) 좀더 자유주의적이고 좀더 좌파적인 인물을 받아들이는 방식으로 확대되었다. 1970~ 80년대에 정당 바깥의 민주화운동 활동가가, 90년대 이후에는 각종 사회이슈를 대변하는 시민사회운동 활동가가 민주당계 정당을 통해 중앙정치에 입문하는 경우가 생겼다. 민주당계 정당에서도 '인재 영입', '젊은 피 수혈' 등의 이유로 이를 적극 장려했다. 이를 주도한 것이 당시 민주당계 정당의 리더였던 '양김', 김영삼과 김대중이었다. 이를 통해 민주당계 정당은 보수주류 정당에 반대하는 세력의 연합체로서 입지를 다졌다. 특히나, 1990년 "3당 합당"(p. XXX 참고) 이후 국회 안의 유일한 야당으로서 고립되자, 민주당계 정당은 집권 가능성을 높이기 위해 보수적 성향의 제3세력 정당과도 연합하는 등의 실리적인 합종연횡도 거듭했다. 1997년 김대중, 2002년 노무현의 대통령 당선은, 반-보수주류 정당의 기치 아래에서 김종필(자유민주연합), 정몽준 등 보수적 대선주자와 단일화가 있었기에 가능했다.
+
+정부수립 이후 1980년대까지 이어진 개발독재 시절의 정책담론이 지금까지 한국이라는 나라가 작동하는 시스템의 큰 틀을 결정했다면, 민주당계 정당이 집권했던 김대중-노무현 행종부 시기(1998~ 2008)의 정책담론은 현대 한국 사회에서 살아가는 삶의 양식에 지대한 영향을 끼치고 있다. 여기에는 정보통신 인프라 완비, 지식산업 기반의 벤쳐기업/스타트업 육성, 현재 한국의 교육/입시제도, 비정규직 및 정리해고 제도의 운영, 문화산업 검열 폐지 및 일본 대중문화 개방, 지방분권과 균형발전 개념의 도입, 남북관계 개선을 통한 교류 가능성 증대 등이 있다. 민주당계/보수주류/사민주의 정당으로 나뉜 현재의 정당체제가 정착된 것도, 각 정당이 김대중-노무현 행정부의 정책을 평가하는 관점과 정책성향의 차이에 따라 갈라짐에 따라 가능했다. 보수주류 정당은 행정부가 반-기업적거나 과도하게 자유를 침해한다며 비판했고, 사민주의 정당은 행정부가 기업을 지나치게 자유방임하여 사회경제적 약자의 형편이 더욱 나빠진다며 비판했다.
+
+앞서 말했듯 민주당계 정당은 반-보수주류 정당의 가치 아래에서 다양한 구성원이 모였고, 이는 1955년 민주당의 창당 시기부터 계속해서 당내 계파의 당내 주도권 경쟁으로 이어졌다. 2016년 총선을 앞두고, 민주당계 정당(당시 새정치민주연합)은 더불어민주당과 국민의당으로 분당되었고, 이 때부터 현재까지 '민주당계 주류정당'과 '민주당계 전라권 제3정당'으로 나뉜 두 정당은 의정활동과 선거에서 연합과 경쟁을 거듭하고 있다. 이 두 정당은 뚜렷한 정책지향보다는, 직업으로서 정치를 하는 스타일(?)의 차이에 따라 나눠서 보아야 좋다.
 
 
 ### 더불어민주당 - 민주당계 주류정당
+더불어민주당은 문재인 대통령이 속한 2020년 현재의 집권당이다. 현재의 더불어민주당은 여러 원내정당 중에서, 구성원의 면면에서 가장 넓은 정치색 스펙트럼을 갖춘 것으로 평가받는다. 한때 보수주류 정당에 몸담으며 김대중-노무현 행정부를 비판했으나 보수주류 정당의 우경화를 비판하며 합류한 세력부터, 한때 사민주의 정당의 주요 활동가였다가 입당한 세력까지 포괄되어 있다. 
+
+집권당의 구성원이 이런 폭넓은 스펙트럼을 이루면, 행정부를 운영하는 입장에서는 큰 장점과 단점을 하나씩 가지게 된다. 장점으로는 행정부에 기용할 수 있는 당내 인력의 범위가 넓어져서, 고위 정무직 공무원의 자리에 집권당 출신 정치인을 두루 배치하여 행정관료를 직접 움직이며 정책을 추진하기 좋다는 것이 있다. 그러나 단점으로, 집권당이 추진할 정책 자체가 굉장히 모호해진다는 것이 있다. 특정한 이슈를 다룰 때 추구하는 가치가 당내 정치인들마다 모두 다르기 때문에, 다양한 정책들이 큰 틀의 방향성을 갖추고 유기적으로 시행되기보다는, 그때 그때 상황과 여론에 맞춰 특정한 관점을 선택해서 정책을 시행하게 된다. 당내 구성원들이 가장 쉽게 합의하고 꾸준히 추진하는 의제는 검찰개혁, 사법개혁, 언론자유 문제 등 개인의 인권 문제 중에서도 중앙의 권력구조와 직접 연관된 분야로 한정되는 경향이 있다. 
+
+이런 측면에서 더불어민주당과 문재인 행정부의 취약점이 특히 두드러진 분야가 노동, 성소수자, 그리고 대학입시제도 개편 문제였다. 집권 초기 더불어민주당은 "소득주도성장"이라는 이름을 내세워 노동시간 단축, 최저임금 인상 및 그 충격을 완화할 지원사업을 추진했었지만, 당내에서도 경제위기를 촉발한다는 주장이 강화되면서 정책 자체가 후퇴하였다. 또한 교육부가 여러 공론합의 과정을 통해 김대중 행정부 시절부터 계속되었던 일관성(수능의 비중을 낮추고 수시전형을 확대하되, 교육부가 엄격한 전형 가이드라인은 제시한다)을 유지하려던 상황에서, (조국 법무장관 임명 과정에서 불거진) 대학입시 관련 부적격 행동에 대한 비판이 강화되자 대통령의 담화를 통해 방향성이 완전히 변화(수능 비중 확대)하는 상황이 있기도 했다. (동성결혼 제도화, `<군형법> 제92조의6("항문성교"를 한 군인, 군무원 등을 처벌하는 조항. 영외에서 또는 강압 없이 이뤄진 경우도 처벌하도록 해서, 사실상 게이 군인을 존재 자체를 처벌하는 조항으로 평가받는다.)` 폐지 등의) 성소수자 문제에 있어서는 의원들마다, 당 지도부 구성원마다 입장이 전부 달라서 서로 상충되는 경우가 많았다. 
+
+
 ### 민생당 - 민주당계 전라권 제3정당
+민생당은 2016년에 창당한 국민의당 구성원 중, 전라권 기반 또는 기존에 민주당계 정당에 소속되었던 인물들이 주축이 되어 구성된 정당이다. 현재 더불어민주당 지도부와 민생당 구성원의 유서깊은 갈등은 2000년대 초반부터 진행되었다(6권 ‘남부지방 권역’, p.XXX 참고). 민주당계 정당이 하나로 통합되어 있던 시절에는, 당의 주요 지지층인 전라권 유권자와 자유주의적 관점을 가진 지지자 사이에 뚜렷한 관점 차이가 존재했다. 민생당은 이 중에서 전라권 유권자 또는 상대적으로 보수적인 전통적 민주당계 지지자를 타겟으로 만들어진 정당이라고 할 수 있다. 그러나 민생당 역시 민주당계 정당으로서, 더불어민주당과 마찬가지로 반-보수주류 정당, 남북관계 화해 등을 추구하고 있다는 공통점이 있다. 이 때문에 민생당의 성격을 명확하게 구분하여 설명하기는 어렵다. 
+
+민생당의 성격을 맥락으로 이해하기 위해, 2016년에 새정치민주연합(더불어민주당의 전신)에서 분당되어 탄생한 국민의당을 잠깐 설명해보자. 2015년 문재인이 새정치민주연합 대표로 취임한 이후, 안철수, 박지원, 문병호, 김관영, 주승용 등이 시간을 두고 탈당하여 국민의당을 창당하고, 여기에 이미 재보궐선거 출마를 위해 탈당한 상태였던 정동영, 천정배, 박준영 등이 합류했다. 창당 당시 국민의당은 "호남정치의 복원", "민주당 내 친문패권주의 타파", "중도개혁세력 결집" 등을 내걸었다. 2016년 총선 당시, 국민의당의 지역구 후보들은 대부분 민주당계 정당 출신, 혹은 전라권에서 무소속으로 출마한 경험이 있는 인물들이었다. 제3정당으로서 민생당의 성격은 "제3세력 정당" 부분(p. XXX)에서 설명해보자. 
+
+
 ### 열린민주당 - 민주당계 비례정당
+2020년 2월에 `창당준비위원회(<정당법>에 의해 중앙선거관리위원회에 등록하여 창당 과정을 준비하는 조직. 창당 최소요건인 5000명의 당원을 확보하기 위해 6개월간 한시적으로 선관위에 등록하여 활동할 수 있다.)`로 등록하여 창당과정을 밟는 상태인 열린민주당은 "더불어민주당이 중도화·보수화하고 대야투쟁을 하지 않는 부분에 대한 비판"을 위해 창당했다고 `밝히고 있다.(<정봉주, 비례정당 '열린민주당' 창당…“민주당 위성정당 아냐">, 연합뉴스, 2020/02/28)` 3월 6일 더불어민주당 소속으로 당선되었던 무소속 현역의원 손혜원이 입당하면서, 원내정당이 되었다. 2020년 3월 15일 현재, 더불어민주당과 민생당 모두 열린민주당에게 별다른 관심과 지원을 주지 않고 있다. 
+
+당장 기존 정당의 지원을 받아 창당되고 있는 것은 아니나, 열린민주당이 궁극적으로는 소수의 비례대표를 당선시켜 향후 중앙정계에서 더불어민주당과의 합당 등을 통해 영향력을 행사하기 위해 창당한 정당이 아니냐는 추측도 나오고 있다. 열린민주당은 지역구 출마 없이 비례대표만 출마한다는 방침을 세웠으며, 기존에 창당논의가 진행되지 않다가 보수주류 정당의 비례대표 위성정당 창당(p. XXX 참고)과 더불어민주당의 비례대표 위성정당 창당이 구체화되기 시작하자 등장한 이후 창당되었다는 점이 그런 가설에 무게를 실어준다.
+
 
 ### 눈여겨볼 선거
 
 #### 서울 영등포구 을
+**한때 최연소 국회의원의 귀환**
+
+민주당계 정당의 계파에 따른 갈등을 한때 가장 상징적으로 보여줬던 인물이 김민석이다. 80년대 학생운동을 이끌었고 김대중의 영입으로 1996년 총선 최연소 국회의원(영등포구 을, 당시 32세), 2002년 서울시장 후보를 지내는 상당한 젊은 거물이었으나, 당시의 당내 소장파(현재의 더불어민주당 지도부 세력)와는 꾸준히 마찰이 있었다. 2002년 10월, 대선을 앞두고 노무현이 정몽준과 단일화해야 한다고 주장하며 `정몽준 캠프로 이적(2002년 4월에 새천년민주당 후보로 결정된 노무현은 지속적인 지지율 하락을 겪었고, 2002년 한/일 월드컵 조직위원장이던 정몽준이 보수주류 정당을 꺾을 후보로 떠오르고 있었다. 이 두 후보에 대한 단일화 요구가 계속되어, 결국 11월 24일 여론조사를 통해 노무현으로 후보 단일화가 이루어졌다.)`하였으나, 대선 전날인 12월 18일 정몽준이 노무현 지지 철회를 발표하며 복당은 영영 불가능해졌다. 이후 오랜 기간동안 낙선과 떠돌이 생활을 하고, 2016년 총선에는 "민주당"을 창당하여 비례대표로 출마하기도 했다. 
+
+그런 그가 2017년 대선을 기점으로 더불어민주당과의 합당을 통해 복귀하고, 민주연구원(더불어민주당의 정책연구소. <정당법>에 의해 국회의원이 있는 정당은 정책연구소를 의무적으로 운영해야 한다.) 원장 등을 역임한 뒤 당내 경선에서 압승하며 지역구로 복귀한다. 그의 선거결과와 행보는 향후 민주당계 정당이 다시 통합될 수도 있는 환경에서, 굉장히 주목할 만한 레퍼런스가 될 것이다. 
+
 
 #### 서울 강남구 갑
+**이제는 정통보수?**
+
+2016년에 강남에서 진격의 모습을 보여준 민주당계 정당이 만약 서울의 강남권 지역구를 완벽하게 차지할 수 있다면, 이는 민주당계 정당이 정통보수로서의 스탠스를 대중적으로 인정받았다는 매우 상징적인 사건이 될 것이다(5권 ‘중부지방 권역’, p.XXX 참고). 그 점에서 더불어민주당이 기대를 가지고 공략할 곳은 강남구 갑이다. 전남 여수시 갑에서 4선(1996~ 2000, 04~ 16) 국회의원을 지낸 김성곤이 2016년에 (총선 투표일을 단 30일 남겨놓고) 상경하여 출마한 곳이 바로 강남 갑이다. 이 곳에서 그는 2012년 여수 갑에서보다 더 높은 `득표율(2012년 여수시 갑: 43.10%, 2016년 강남구 갑: 45.18%)`을 기록하며 패배했다. 이는 동시에 민주당계 정당 후보가 강남 갑에서 사상 처음 40%대 득표율을 얻은 기록이기도 하다. 
+
 
 #### 부산 연제구
+**부산, 30대, 소장파, 당내 육성 인재**
+
+김해영이라는 한 명의 초선의원이 더불어민주당 당내에서 가지는 상징성은 대단하다. 총선 출마 이전부터 민주당계 정당의 대선 선거캠프, 연제구지역위원장, 전국청년위원장(직무대리) 등을 역임하며 당내에서 성장한 뒤, 2016년 총선의 부산 연제구에서 아무도 예상하지 못한 승리를 거두며 '2016-2020 국회 최연소 지역구국회의원(당시 만 39세)'이라는 타이틀과 함께 화려하게 국회로 입성한다. 한국에서 직업 정치인이 되는 과정을 보면, 대외활동이나 여타 직업활동이 아닌, 정당 내부에서의 정치활동 만을 바탕으로 성장하여 30대 나이에 국회의원이 되는 것은 거의 불가능하다. 그 벽을 (심지어 경남권 지역구에서) 뚫어낸 인물로서 김해영은 상당한 주목을 받게 되었다. 
+
+현재 김해영은 더불어민주당 `최고위원(더불어민주당, 미래통합당 등이 운영하는 제도. 당대표 및 원내대표와 함께 당내 최고위 지도부 회의에 참여한다.)`으로 당 지도부에 참여했으며, 그 과정에서 조국 법무장관 임명, 더불어민주당의 비례연합정당 참가 등의 상황에서 지도부 주류와 다른 의견을 내는 소장파의 입지를 드러냈다. 그의 생환여부 및 앞으로의 활동은 더불어민주당의 미래에 굉장한 영향을 끼칠 것이다.
 
 #### 충남 공주시-부여군-청양군
+**이제는 ‘괘념’치 않을 수 없는 충청권 민주당**
 
+충청권의 민주당계 정당을 한동안 홀로 떠받친 인물은 안희정 전 충청남도지사였다. 2008년 총선에서 대전-충남에서 단 `2명(양승조: 충남 천안시 갑, 박병석: 대전 서구 갑)`만 당선되었던 상황에서, 2010년에 도지사에 당선된 안희정의 무난한 도정운영과 전국적 인지도는 민주당계 정당에게 단비와 같았다. 2012/2016년 총선에서 많은 민주당계 정당 후보들은 자신이 안희정 사단임을 공공연하게 내세우며 당선되었는데, 그 선두에는 2010년 안희정 캠프 선거대책본부장과 충청남도 정책보좌관을 지낸 박수현이 있었다. 그는 2012년 공주시 선거구에서 당선되며 공주시의 첫 `풀타임 민주당계 국회의원(2004년 총선에서 당선된 오시덕(열린우리당)은 <공직선거법> 위반으로 2005년 당선무효가 되었다.)`이 되었다.
+
+박수현은 2016년에 지역구 개편으로 부여와 청양이 추가되면서 낙선하였고, 안희정은 2019년 직원 성폭행으로 구속되며 정치생명이 끝났다. 안희정이 사라진 이후의 충청권 민주당계 정당은 다시 예전과 같이 존속할 수 있을까? 박수현이 다시 출마하는 공주-부여-청양 선거구를 통해 이를 살펴볼 수 있겠다.
 
 
 
 
 
 ## 보수주류 정당
-**
+**대한민국 정부수립 이후 72년 중 58년간 집권한 정당. '권위주의적 철권통치'와 '경제와 안보에 유능'하다는 두 이미지의 정당. 이 이미지가 2020년 총선을 거쳐 어떤 방향으로든 급격하게 변할 것이다.**
 
 1948년의 대한민국 정부수립 이후, 보수주류 정당은 대부분의 기간동안 집권당의 위치를 차지하며 한국 사회의 ‘보수’이자 ‘주류’로 자리잡았다. 물론 1987년 민주화 이전까지, 보수주류 정당이 대통령 1인을 중심으로 한 권위주의 독재정권을 통해 집권했다는 것은 부정할 수 없다. 이승만의 자유당, 박정희의 민주공화당, 전두환과 노태우의 민주정의당으로 이어지는 약 40년의 기간동안, 보수주류 정당은 쿠데타와 당내 세력 숙청 등 폭력적인 방법을 거쳐서(?) 새로운 수뇌부를 수혈받았다. 이 교체 과정에서 한국 사회의 개발을 주도한 관료, 군인, 학자, 기업가 등이 보수주류 정당을 통해 정계에 입문했던 것도 사실이다. (보수주류 정당의 집권이 영원히 계속될 것 같았다는 배경도 이해해 주자.) 그럼에도 불구하고, 당원의 구성, 수뇌부와 거리가 먼 일반 정치인의 구성, 지역조직 등은 별다른 변화 없이 계승되어, 보수주류 정당이라는 정체성을 유지할 수 있었다.
 
-보수주류 정당의 이념과 정책지향 역시, 과거 독재정권 시절의 가치를 유지하며 시대에 맞추어 조금씩 변형하는 형태를 취하고 있다. 북한과의 대립과 한미동맹을 중심으로 하는 외교안보정책, 정부의 시장경제 불간섭주의, 대기업 성장 중심의 경제정책, 최저임금 인상 및 노동시간 단축 반대, 복지정책 확대 및 정부재정 확대지출 반대, ‘동성애 및 동성혼’ 반대 등의 입장을 취하고 있다. 
+보수주류 정당의 이념과 정책지향 역시, 과거 독재정권 시절의 가치를 유지하며 시대에 맞추어 조금씩 변형하는 형태를 취하고 있다. 북한과의 대립과 한미동맹을 중심으로 하는 외교안보정책, 정부의 시장경제 불간섭주의, 대기업 성장 중심의 경제정책, 최저임금 인상 및 노동시간 단축 반대, 복지정책 확대 및 정부재정 확대지출 반대, ‘동성애 및 동성혼’ 반대 등의 입장을 취하고 있다. 물론 이 입장은 생각보다 쉽게(!) 바뀌기도 한다. 1990년대 초반의 공산주의 진영 붕괴 당시, 러시아(소비에트 연방)와 중국과의 수교를 성사시키고 북한과의 종전협정을 추진했던 것은 보수주류 정당의 성과였다. 한국의 건강보험과 국민연금과 고용보험(실업급여)을 도입한 것도, `<대한민국헌법> 제119조2항("국가는 균형있는 국민경제의 성장 및 안정과 적정한 소득의 분배를 유지하고, 시장의 지배와 경제력의 남용을 방지하며, 경제주체간의 조화를 통한 경제의 민주화를 위하여 경제에 관한 규제와 조정을 할 수 있다.")`에 명시된 "경제의 민주화" 조항을 삽입한 것도 보수주류 정당의 성과였다. 요컨데, 행정부 관료나 경제학 교수 등이 군부정권에 참여해서 '정권을 잃을 염려 없이' 정책을 주도하던 때에는 보수/우파 이념성향에 얽매이지 않은 정책을 짰고, 당내 정치인들 역시 자신의 이권이 침해되지 않는 선에서 이를 무난하게 따랐다. 오히려 민주화 이후 30년 간 보수주류 정당은 보수의 이념을 선점하기 위해 노력했고, 그 과정에서 자신이 민심을 얻을 수 있었던 근거인 '합리적 정책 추진'의 틀이 점점 희석되었다고 보아야 한다. 그 상징적인 사건이 바로 2017년의 박근혜 대통령 파면이었다.
 
-현재의 보수주류 정당이 완성된 계기는, “3당 합당”이라고 불리우는 1990년의 1월의 사건이다. 2기 군사정권의 수뇌부(노태우)가 주축이 된 민주정의당(당시 전체 299석 중 128석), 1기 군사정권의 수뇌부(김종필)가 주축이 된 신민주공화당(35석), 그리고 민주당계 정당의 오랜 리더(김영삼)가 주축이 된 통일민주당(60석)의 합당이 갑자기 발표되었다. 과반 의석의 정당 없이 `4개의 정당(김대중이 주축이 된 평화민주당(71석)을 포함한다.)`이 균형을 이루던 상황을 해소하기 위해, 이른바 ‘보수 대연합’의 가치를 내걸고 합당을 진행했다. 3당 합당을 통해 보수주류 정당은, 이념적으로는 자유주의와 좌파를, 지역적으로는 전라권을 고립시키며 패권을 차지한다. 3당 합당 이후 30년 동안 몇 번에 걸친 합당과 분당이 있었지만, 3당 합당으로 형성된 보수주류 정당의 구성은 지금까지도 큰 변화 없이 이어지고 있다. 
+현재의 보수주류 정당이 완성된 계기는, “3당 합당”이라고 불리우는 1990년 1월의 사건이다. 2기 군사정권의 수뇌부(노태우)가 주축이 된 민주정의당(당시 전체 299석 중 128석), 1기 군사정권의 수뇌부(김종필)가 주축이 된 신민주공화당(35석), 그리고 민주당계 정당의 오랜 리더(김영삼)가 주축이 된 통일민주당(60석)의 합당이 갑자기 발표되었다. 과반 의석의 정당 없이 `4개의 정당(김대중이 주축이 된 평화민주당(71석)을 포함한다.)`이 균형을 이루던 상황을 해소하기 위해, 이른바 ‘보수 대연합’의 가치를 내걸고 합당을 진행했다. 3당 합당을 통해 보수주류 정당은, 이념적으로는 자유주의와 좌파를, 지역적으로는 전라권을 고립시키며 패권을 차지한다. 3당 합당 이후 30년 동안 몇 번에 걸친 합당과 분당이 있었지만, 3당 합당으로 형성된 보수주류 정당의 구성은 지금까지도 큰 변화 없이 이어지고 있다. 
 
 하지만 ‘보수’라는 너무 모호한 가치를 내세우며 다양한 사람들이 합류함에 따라, 보수주류 정당은 현재에도 당내 계파 경쟁을 수시로 거치고 있다. 이는 단순한 당내 지분 경쟁을 넘어서, 보수주류 정당의 이념 지향을 결정하는 중요한 문제였다. 3당 합당 직후에는 민주당계 정당 출신의 ‘민주계’가 군부정권에 참여한 ‘민정계’와 ‘공화계’를 제치고 당 주도권을 잡으면서, 보수주류 정당이 군부정권의 비리와 학살 문제를 조사하고 단절하는 데에 직접 참여하기도 했다(6권 ‘남부지방 권역’, p.XXX 참고). 2007년의 대통령 후보 경선에서 맞붙은 이명박과 박근혜의 대결 이후에도, 이명박 행정부의 충청권 행정도시(지금의 세종특별자치시) 사업 중단 계획을 당내 친-박근혜계가 반대하여 막아낸다던가, 유승민 원내대표 시절의 새누리당이 박근혜 대통령의 부동산 중심 경제정책을 비판하고 각을 세우다가 친-박근혜계의 압박에 의해 퇴진하는 등의 모습을 보였다. 박근혜 대통령의 탄핵에 찬성하는 새누리당 의원들이 대거 탈당하여 한때 “개혁적인 보수정당”(바른정당→바른미래당)을 결성했던 것 역시 이러한 계파 경쟁의 연장선이라고 볼 수도 있다.
 
 
 ### 미래통합당 - 보수주류 정당
+2017년 박근혜 대통령 탄핵 직후, 집권 보수정당이었던 새누리당은 크게 3가지 갈래로 갈라졌다. 박근혜의 탄핵을 적극 찬성한 세력이 "개혁적인 보수"를 내세우며 창당한 바른정당, 박근혜의 탄핵을 적극 반대하고 복권을 주장하는 세력이 창당한 2017년의 새누리당(p. XXX 참고), 그리고 기존의 새누리당이 이름을 바꾸었던 자유한국당. 각종 합종연횡을 통해, 바른정당과 자유한국당의 구성원들이 2020년에 다시 통합되어 미래통합당을 만든다. 미래통합당에 참여한 구성원은 새누리당 출신 뿐만 아니라, 2016년 총선의 제3세력 정당(국민의당, p. XXX 참고)에서 전라권 의원들과 거리를 두고 안철수 대표와 가까이하며 활동하던 의원들도 있었다. 
+
+2020년 기준으로 보면 반-문재인 행정부의 기치 아래에 모인 정당이지만, 2017년 당시를 떠올리며 보면 미래통합당은 당시에 비해서도 극우화가 상당히 진행되었다. 이는 "보수개혁 정당"을 내세웠던 바른정당이 보수 내부의 여론 주도권을 결국 잡지 못한 것 때문에, 4~ 5차례의 집단탈당과 입당을 통해 자유한국당으로 흡수통합된 것과 다름없는 상황의 탓이 컸다. 국민의당(2016년) 출신 구성원들도 비슷한데, 문재인 행정부에 호의적이지 않은 정치인이 지역구에서 당선되기 위해서는 보수주류 정당 출신이 아니더라도 미래통합당에 편입되어야 한다고 판단한 것이다. 그와 동시에, 자유한국당은 새누리당(2017년)에 지지층을 빼앗기지 않기 위해 극우 대중집회에 적극 결합하는 모습을 보여주었다. 
+
+결과적으로 미래통합당의 등장으로 인해, 한국에서 보수/우파를 대표처럼 여겨지는 정당의 극우화는 더욱 가속화되었다. 자유한국당과 바른정당(바른미래당)의 경쟁은 열성적 극우 지지층을 더욱 결집시킨 자유한국당의 승리로 끝났다. 그 과정에서 자유한국당은 (대통령 선거가 아직 한참 남은 상황을 고려하더라도) 박근혜 행정부 시절의 정책적 방향성과 노선을 제대로 평가할 기회를 가지지 못했다. 미래한국당이 문재인 행정부의 정책행보를 파편적으로 반대하는 것을 넘어서서 자체적인 방향성을 갖추는 과정에서, 2020년 총선에서 당선될 국회의원들의 영향력이 많이 들어갈 것이다. 어쩌면 미래통합당의 미래는 2020년 총선 승리여부가 아니라, 2020년 총선에서 당선되는 구성원의 면면 그 자체에 따라 달라질 수도 있다.
 
 
 
-### 미래한국당 - 반헌법(?) 보수주류 비례정당
+### 미래한국당? - 어쩌면 반헌법적인? 보수주류 비례정당
+미래한국당이라는 정당은 2019년 12월 19일, 자유한국당(보수주류 정당) 원내대표 `심재철의 발언(<심재철 “연동형 밀어붙이면 비례한국당 만들 것”>, 동아일보, 2019/12/19)`으로부터 탄생했다. “만약 좌파세력 심상정, 정동영, 손학규, 박지원이 연동형을 밀어붙인다면 우리는 비례한국당을 만들 수 밖에 없다.” 보수주류 정당을 둘로 쪼개서, 한 정당은 지역구만, 다른 정당은 비례대표만 출마하면 새로 바뀐 선거제도에서 의석이 뻥튀기되는 것을 이용한 것이다. 2019년에 12월에 <공직선거법> 개정안이 통과되자 자유한국당은 본격적으로 비례대표용 위성정당의 창당을 준비했다. 자유한국당 부산시당 강당에서 미래한국당 부산시당 창당대회를 연다던가, 당명으로 "비례한국당"을 쓰려다가 중앙선관위가 등록을 거부하자 "미래한국당"으로 살짝 고쳐서 등록한다던가, 자유한국당 현역 의원을 미래한국당으로 입당킨다던가, 당이 추구하는 가치를 나타내는 `강령이 310자(미래한국당의 행성정당(?)인 미래통합당의 강령은 2300자에 달한다.)`에 불과한 등, 보수주류 정당의 적극적인 지원을 받아 급조된 정당이 2020년 2월 13일 중앙선관위 등록을 받아내며 창당하였다.
+
+이것이 어떻게 가능했는가? 개정된 <공직선거법>은 모든 정당들에게 선거 1년 전까지 민주적인 비례대표 후보 선출 방식을 확정하여 중앙선관위에 제출하도록 하였다. 이를 통해 기존 정당들이 비례대표만을 위한 위성정당을 선거 직전에 창당할 것을 예방할 방법을 마련했다. 다만 2020년 총선에 한하여 선거일 1개월 전(3월 15일) 이전까지 이를 제출하도록 하였는데, 이것이 화근이 되었다. 
+
+현재 미래한국당과 가장 각을 세운 정당은 주요 경쟁자인 민주당계 정당들이 아니라, 사민주의 정당인 정의당이다. 중앙선관위가 미래한국당 정당등록을 받아준 것에 대해, 정의당은 "미래한국당은 설립 목적·조직·활동이 비민주적인 헌법 파괴 조직"이라며 헌법재판소와 서울행정법원에 각각 행위 취소 및 효력 가처분신청을 요청하는 소송과 헌법소원을 제기하였다. 이 중 단 하나라도 통과될 경우, 미래한국당은 후보를 내지 못하거나 당선된 비례대표 의원이 모두 의원직을 박탈당하는 사태가 일어날 수도 있다. 
+
 
 
 ### 눈여겨볼 선거
@@ -80,12 +126,27 @@
 
 
 #### 부산 남구 을
+**우파코인 Right-wing Coin**
+
+경기 광명시 을의 재선(2012~ 20) 국회의원 이언주는 4년간 급격한 성향 변화를 보였다. 더불어민주당으로 당선되었던 그는 2017년 대선 즈음에 문재인이 아닌 안철수 지지를 선언하며 국민의당에 입당하였고, 국민의당이 보수주류 정당 출신("개혁적인 보수정당")과 합당하여 바른미래당이 된 이후 스스로를 "강경한 자유주의 시장경제 지자자"라고 규정하며 활동하기 시작했다. 2020년 1월에 신당인 "미래를향한전진4.0"을 창당하여 독립한 이후 그는 보수주류 정당으로의 보수대통합을 주장했고, 결국 바른미래당을 탈당한 "개혁적인 보수정당"은 물론 자신까지 포함하여 새롭게 통합된 미래통합당이 출범하는 데 참여할 수 있었다. 
+
+그가 광명에서의 3선을 포기하고 보수주류 정당이 당선되기 상대적으로 쉬운 부산에 공천된 것도, 그간의 과정에 대한 배려라고 할 수 있다. 물론 그렇다고 그가 당선이 확정적인 것은 아니다. 남구 을은 더불어민주당이 2016년 총선에서 승리한 부산의 5개 지역구 중 하나이다.
+
 
 #### 대구 수성구 갑
+**집 지키기 (1)**
+
+2016년 총선의 대구 수성구는 보수주류 정당(새누리당) 참패를 가장 분명하게 보여주는 곳이었다. 수성 갑에서는 민주당계 정당(김부겸, 더불어민주당)이 후보의 개인기와 지역활동을 꾸준히 다진 것이 합쳐져서 1985년 이후 31년 만에 최초로 당선되었다. 수성 을에서는 당내 반-박근혜 세력으로 분류되었던 주호영을 공천에서 배제하자, 주호영이 무소속으로 출마하여 새누리당 후보를 상대로 승리한 것이다. 확고해보이던 당내 조직세력과 지지층을 제대로 관리하지 못하며 새누리당이 총선에서 패배했다는, 두 가지 이유가 집약된 곳이었다. 
+
+여러 갈래로 나뉘어질 뻔 했떤 보수주류 정당이 미래통합당으로 재편된 것 역시, 결국 2016년 총선에서의 패배 원인을 해소하기 위한 한 방법이라고 할 수 있겠다. 그 결과를 확인하기 위해서는 수성구를 지켜보는 것이 가장 좋을 것이다. 마침 짜여진 대진표가 (미학적으로) 너무나 아름답다. 2020년 대구 수성구 갑의 더불어민주당 후보는 김부겸, 미래통합당 후보는 주호영이다. 
+
 
 #### 경기 성남시 분당구 갑/을
-** **
-수도권에서 진격의 민주당을 보여주는 
+**집 지키기 (2) + 새 집 짓기**
+
+보수주류 정당이 수성구 다음으로 탈환할 곳은 경기도의 성남 분당이다. 이 곳에는 보수주류 정당의 고전적인 지지층과 새로운 지지층으로 공략할 사람들이 모여있다. 분당에서 보수주류 정당의 고전적인 지지층은 90년대 신도시 개발과 함께 유입된, 부동산 위주로 많은 자산을 가졌고 교육열이 높은, 고학력 중산층이었다. 이 지지층이 워낙 탄탄하여, 보수주류 정당은 '성남시 분당구' 지역구가 신설된 1996년 이후 총선에서 단 한 번도 패배하지 않았다. 그것이 무너진 첫 사례는 2011년 분당구 을 보궐선거에서 손학규(민주당)가 당선된 것이었고, 2016년에 두 석 모두 더불어민주당(김병관, 김병욱)이 승리하면서 더욱 분명하게 드러났다. 
+
+보수주류 정당이 새롭게 공략할 지지층은, 바로 젊은 IT산업 및 스타트업 종사자이다. IT산업단지 판교가 새로 개발되면서 판교에 새로 거주하게 된 이들의 표심은 상당히 유동적이다. 이들이 공유하는 탈권위적 정서가 지금까지는 보수주류 정당에게 불리하게 작용했지만, 마찬가지로 이들이 공유하는 행정부의 경직된 정책집행(특히나 새로운 산업을 대할 때 나타나는) 자체에 대한 거부감은 (어느 당이든) 집권하고 있는 당 자체에 대한 거부로 이어질 수 있다. 만약 보수주류 정당이 이 새로운 지지층을 잘 포섭하게 된다면, 분당에서의 선거 결과가 매우 흥미롭게 나타날 것이다. 
 
 
 
@@ -106,7 +167,9 @@
 그 이후 4년간, 국민의당은 당의 방향성을 놓고 큰 갈등을 겪었다. 박근혜 대통령 탄핵을 찬성한 보수정당 출신 세력과 통합할 것인가, 아니면 민주당계 정당의 정체성을 유지한 세력으로 남을 것인가? 문재인 행정부 및 더불어민주당과 어느 단계까지 협력하고, 어느 단계까지 견제할 것인가? 이 문제를 두고 당내 의견이 갈리면서 분당과 합당을 거듭하여, 일부는 보수주류 정당으로, 일부는 민주당계 정당으로, 일부는 여전히 제3세력 정당으로 진로를 결정하고 2020년 총선을 준비하고 있다. 현재 “제3세력 정당”이라고 분류할 수 있을 정당은 2개가 존재한다. 
 
 ### 민생당 - 민주당계 전라권 제3정당
-앞서 “민주당계 정당” 부분에서 설명(p.XXX)한 그 민생당이 맞다. 민생당은 민주당계 정당이자, 전라권 제3정당이라고 분류할 수 있다. 2016년의 국민의당 소속 의원 중, 전라권에 기반을 둔 민주당계 정당 출신 세력이 중심이 되었다. 박지원, 정동영, 박주선, 천정배 등 과거 
+앞서 “민주당계 정당” 부분에서 설명(p.XXX)한 그 민생당이 맞다. 민생당은 민주당계 정당이자, 전라권 제3정당이라고 분류할 수 있다. 이 정당은 2016년의 국민의당 당시, 과반 의석을 가진 정당이 없는 상태에서 38석의 거대한 제3세력으로 자리잡았다. 2016-2020 국회가 개원한 때는 대통령 선거가 1년 이상 남았던 시점이었기에, 국민의당에 소속된 유력 대선후보(안철수)를 중심으로 언론과 여론의 관심을 받을 수 있었다. 또한 국회 내 경험이 많은 중진 다선의원(박지원, 정동영, 천정배, 박주선, 주승용 등)이 두루 포진했기에, 따라서 국회 안에서 거대 양당 사이의 갈등을 모두 비판하며 동시에 중재역으로서 영향력을 발휘하는 행동이 가능했다.  
+
+국민의당은 2018년 초, 보수주류 정당의 박근혜 탄핵 찬성파, 이른바 "개혁적인 보수정당"(바른정당)과의 합당을 놓고 갈등을 벌였다. 합당 찬성파는 바른정당과 합당하여 바른미래당을 만들었고, 합당 반대파는 탈당하여 민주평화당을 만들었다. 그러나 두 당에 소속된 국민의당 출신 구성원은 대부분 더불어민주당-바른미래당-민주평화당-정의당으로 이어지는 국회 내 개혁입법연대의 일원으로 함께 합류했다. 이 때의 개혁입법연대는 `"유치원 3법"(4권 ‘위원회와 주요 이슈(2)’, p.XXX 참고)`, `공수처 설립(3권 ‘위원회와 주요 이슈(1)’, p.XXX 참고)`, `선거제도 개편(3권 ‘위원회와 주요 이슈(1)’, p.XXX 참고)` 등을 이뤄내는 데에 큰 역할을 한다. 이 때의 경험을 바탕으로 2020년에 과거 국민의당 구성원이 다시 민생당으로 합류하게 된다. (단, 입법연대에 소극적이었던 바른미래당의 보수주류 정당 출신 및 일부 비례대표 의원들은 2020년에 미래통합당(보수주류 정당)으로 합류한다.) 
 
 ### 국민의당(2020년) - 대선후보 중심 제3정당
 만약 당신이 2016년 총선에 투표하고 4년 만에 다시 선거에 관심을 가지고 있다면 - 환영한다. 4년 전의 “국민의당”과 다른 새로운 “국민의당”이 2020년에 탄생했다. 이 신생 국민의당은 2016년의 국민의당 소속 의원 중에서, 대선후보 안철수와의 연결성이 강한 인물들이 중심이 되었다. 이태규(비례대표) 등의 비례대표, 또는 권은희(광주 광산구 을)처럼 전라권 지역구를 가지고 있지만 민주당계 정당에서의 활동이 길지 않았던 인물들이 창당에 참여했다. 
@@ -118,10 +181,27 @@
 ### 눈여겨볼 선거
 
 #### 광주 서구 을
+**천정배, 천정배, 천정배**
+
+천정배라는 인물을 통해, "민주당계 전라권 제3정당"이라는 것이 형성된 배경을 좀 더 알아보자. 안산의 4선 의원(단원구 갑: 1996~ 2012)이자 2002년 대선후보 경선에서 처음부터 노무현을 지지했던 유일한 당시 현역의원, 노무현 행정부 시절의 법무장관과 집권당(열린우리당) 원내대표를 맡았던 천정배. 이렇게 민주당계 정당의 중진으로 입지를 다졌던 그는 2012년 '험지'인 서울 송파구 을에 출마했다가 불과 4%p의 득표율 차이로 낙선했는데, 그 이후 민주당계 정당에서의 활동에 거의 참여하지 못했고, 2015년 탈당하여 무소속으로 서구 을 보궐선거에서 당선되었다. 
+
+민주당계 정당의 중진으로 가지고 있었던 개인의 정치적 영향력, 그리고 총선에서의 (나름의) 희생적 행동에도 불구하고 역할을 부여받지 못한 상황. 이 두 가지가 겹치면서, 전라권 기반의 독자정당을 창당할 이유가 생긴 셈이다. 2016년 총선에서는 이 영향력이 십분 발휘되었다. 이 때 천정배는 더불어민주당 영입인사였던 양향자를 상대했고, 20%p 이상의 넉넉한 득표율 차이로 당선되었다. 4년이 지나서, 더불어민주당과 민생당은 이번에도 2명의 같은 후보를 나란히 단수공천했다.
 
 #### 광주 광산구 을
+**공익제보자와 제3세력 정당**
 
+광산구 을은 2020년 국민의당의 유일한 현역 지역구의원, 권은희의 지역구다. 권은희는 2016년에 국민의당으로 당선된 전라권 지역구 국회의원 중에서는 흔치 않게, 지역구 조직기반이 약하다는 특성을 가지고 있다. 그는 정치 입문 이전의 경찰 근무기간 중에 공익제보를 한 경력(3권 ‘위원회와 주요 이슈(1)’, p.XXX 참고)으로 이미 전국적인 인지도는 가졌고, 안철수가 함께하던 시절의 민주당계 정당(새정치민주연합) 후보로 전략공천되어 2014년 보궐선거를 통해 당선되어 국회에 입성했기 때문이다. 이 점 때문에 권은희는 '전라권 의원'보다는 '안철수계 의원', 전라권 제3세력 정당이 전국적인 이슈에 대응할 때 앞장서는 의원이라는 성격이 좀 더 강한 편이었다. 권은희가 민생당이 아니라 국민의당으로 합류한 것도, 이런 배경에서 이해할 수 있다. 
+
+2020년 국민의당이 지역구 후보 무공천을 선언하면서, 광산 을에서 권은희가 자리를 비우게 되었다. 재미있는 것은 그 자리에 권은희와 굉장히 비슷한 성격을 가진 신인 후보, 민생당의 노승일이 새로 입후보한다는 점이다. 박근혜-최순실 게이트 당시, K-스포츠재단 부장으로 청문회에 증인으로 참석해 공익제보를 쏟아냈던, 바로 그 노승일이다. 
+
+
+<!--
 #### 전남 영암군-무안군-신안군
+**박준영, 이윤석, 이윤석**
+2016년 총선에서 국민의당에게 영암-무안-신안은 핵심 선거구였다. 3선 전라남도지사(2004~ 2014) 출신인 박준영이 국민의당 후보로 출마했기 때문이다. 지역정계에서 충분히 거물이라고 불릴 이력임에도 불구하고, 박준영은 불과 3%p의 득표율 차이로 간신히 당선되었다. 그는 이 선거에서 일어난 <공직선거법> 위반 문제로 2018년 의원직을 상실했고, 2018년의 재선거에서는 2년 전 박준영에게 패한 더불어민주당 후보(서삼석)가 67.97%의 득표율로 무난히 당선된다.  
+민생당은 이 때 입장에서 
+한 때 개신교 계열 극우정당을 원내정당으로 만들어준, 그 이윤석(2008~ 16, p. XXX 참고)도 원래는 이 지역구에서 민주당계 정당 소속 국회의원으로 있었다. 그는 거의 없는 상태에서  
+-->
 
 ## 사민주의 진보정당
 **“인간이 인간답게, 사회가 평등하게, 노동이 아름답게, 민중이 주인되게.” 민주노동당 당가의 가사에서 느끼는 충격처럼, 사민주의 정당은 등장과 존재 자체만으로도 중앙정치의 작동방식을 근본적으로 뒤바꿨다.**
@@ -142,7 +222,7 @@
 이는 사민주의 정당으로서 장점이자 단점으로 작용하고 있다. 장점이라면, 국회를 비롯한 중앙정치에서 목소리의 영향력이 제일 크다는 것이다. 민주당계, 보수주류, 보수적 제3세력 정당들과의 협상을 통해 주요 의제를 관철시킬 수 있고, 중앙정치에서 사회적 약자가 대변되는 몇 안되는 창구 역할을 한다. 2016-2020 국회에서 어렵게 통과시킨 <산업안전보건법> 개정안(통칭 ‘김용균법’), <공직선거법> 개정안 등이 그 성과이다. 하지만 인적 구성의 폭이 넓은 것은 단점도 된다. 이슈에 따라 당내 여론이 다양하여 갈등이 생길 수 있고, 정당과의 협상에 참여하는 과정에서 ‘소수정당임에도 지지해야 하는 이유’인 독창적 정체성을 잃을 수 있다는 것이다. 2019년 하반기의 조국 전 법무부장관 임명 국면에서, 이 이슈를 바라보는 관점(검찰개혁과 사회불평등의 문제)을 놓고 당내 갈등이 깊어져 당 차원의 입장을 보여주지 못한 것이 그 예시이다. 
 
 ### 민중당 - 민족주의 좌파정당
-2015년에 창당(당시 이름 ‘민중연합당’)한 민중당의 전신에 대해서는 의견이 다양하지만, 당 지도부나 공직선거 후보의 많은 수가 과거 `통합진보당(2011년에 창당되었으며, 2012년 총선의 당내 비례대표 후보 경선에서 정파별 부정선거 문제의 처리를 두고 입장이 갈라져서, 현재의 정의당과 분당되었다. 내란선동 혐의로 유죄판결을 받은 이석기 의원 문제와 당헌에 적힌 ‘진보적 민주주의’가 북한체제의 이론과 유사하다는 석연찮은 이유로 인해, 2014년 박근혜 행정부가 정당해산을 청구하고 헌법재판소가 이를 받아들이며 강제해산된다.)` 출신이다. 이들은 민주노동당 시절부터 지역구 단위로 주민조직이나 시민운동세력과 밀착하는 방식으로 활동했고, 이는 민주노총(전국민주노동조합총연맹), 전농(전국농민회총연맹) 등 규모가 큰 전국단위 조직에서 민중당 지지세를 키우는 데에 도움이 되었다. 따라서 민중당은 중앙정치에서의 열세와 무관하게 지역구 선거, 특히 대기업 생산직 노동자와 농민이 많은 지역구에서 강세를 보였다. 
+2015년에 창당(당시 이름 ‘민중연합당’)한 민중당의 전신에 대해서는 의견이 다양하지만, 당 지도부나 공직선거 후보의 많은 수가 과거 `통합진보당(2011년에 창당되었으며, 2012년 총선의 당내 비례대표 후보 경선에서 정파별 부정선거 문제의 처리를 두고 입장이 갈라져서, 현재의 정의당과 분당되었다. 내란선동 혐의로 유죄판결을 받은 이석기 의원 문제와 당헌에 적힌 ‘진보적 민주주의’가 북한체제의 이론과 유사하다는 석연찮은 이유로 인해, 2014년 박근혜 행정부가 정당해산을 청구하고 헌법재판소가 이를 받아들이며 강제해산된다.)` 출신이다. 이들은 민주노동당 시절부터 지역구 단위로 주민조직이나 시민운동세력과 밀착하는 방식으로 활동했고, 이는 `민주노총(전국민주노동조합총연맹), 전농(전국농민회총연맹)(1990년과 19XX년에 탄생한 한국 최대의 노동운동조직과 농민운동조직이다. 전국에서 직장, 산업 및 지역별로 조직되어 있는 노동조합 및 농민회가 가입하는 연합체이다.)` 등 규모가 큰 전국단위 조직에서 민중당 지지세를 키우는 데에 도움이 되었다. 따라서 민중당은 중앙정치에서의 열세와 무관하게 지역구 선거, 특히 대기업 생산직 노동자와 농민이 많은 지역구에서 강세를 보였다. 
 2012년 총선에서 전국구급 유명 정치인(노회찬, 심상정) 이외에 지역구 당선자를 내지 못했던 정의당계 정파와 달리, 민중당계 정파는 지역구 당선자를 4명(이상규: 서울 관악구 을, 김미희: 경기 성남시 중원구, 오병윤: 광주 서구 을, 김선동: 전남 순천시-곡성군)이나 배출했다. 2016년에 당선되고 훗날 민중당에 입당하는 2명의 무소속 의원(김종훈: 울산 동구, 윤종오: 울산 북구) 역시 민주노총 지지 후보단일화 경선에서 정의당, 노동당 후보에게 승리했다. 그러나 중앙정계에서 민중당의 가장 큰 약점은, 80년대부터 지속된 정파 특유의 외교통일 분야 입장이다. 반전(反戰)평화 가치를 진보정당 중에서 가장 적극적으로 내세우지만, 그러나 주변 정세와 무관하게 민족주의적 축면에서 주한미군 철수와 남북교류 확대를 주요 의제로 내세운 점, 특히 2000년대 북한의 핵개발을 자기방어적 조치로 이해한다는 입장을 보인 것이 진보정당 전체의 지지확장에 두고두고 걸림돌이 되는 실정이다.
 
 ### 노동당 - 선명 사민주의 정당
@@ -157,16 +237,24 @@
 #### 인천 연수구 을, 경기 고양시 갑
 **사민주의 정당 비례 1번의 신화**
 
-이정미(2016년 정의당 비례 1번 후보)의 연수 을 출마를 통해, 심상정(2004년 민주노동당 비례 1번 후보) 이후로 `12년 만에(2008년 민주노동당 비례 1번 곽정숙은 2012년에 불출마. 2012년 통합진보당 비례  1번 윤금순은 당선 직후, 경선 부정 논란에 따른 후보 총사퇴 때 함께 사퇴.)` 사민주의 정당의 비례 1번이 지역구에서 재선에 도전한다. 비례대표를 통해 의정활동을 경험한 사민주의 정당 후보가 지역구에 등장하는 것은, 지역 전체 여론지형을 뒤집을 수 있는 문제다. 심상정
+이정미(2016년 정의당 비례 1번 후보)의 연수 을 출마를 통해, 심상정(2004년 민주노동당 비례 1번 후보) 이후로 `12년 만에(2008년 민주노동당 비례 1번 곽정숙은 2012년에 불출마. 2012년 통합진보당 비례 1번 윤금순은 당선 직후, 경선 부정 논란에 따른 후보 총사퇴 때 함께 사퇴.)` 사민주의 정당의 비례 1번이 지역구에서 재선에 도전한다. 비례대표를 통해 의정활동을 경험했고, 정당 전체의 미약하게나마 막강한(?) 지원을 받을 사민주의 정당 후보가 지역구에 등장하는 것은, 경우에 따라 지역 전체 여론지형을 뒤집을 수 있는 문제다. 이 현상은 심상정의 지역구, 고양시 갑(고양시 덕양구 중 일부)에서의 강력한 정의당 지지세를 통해 확인할 수 있다. 2016년 총선에서 심상정이 더불어민주당과의 후보 단일화 없이도 과반 득표로 당선되었을 뿐만 아니라, 2018년 경기도의회 비례대표 정당투표에서는 정의당이 고양 덕양에서 20.16%의 득표율을 올리는 쾌거를 기록한다.
 
 #### 경남 창원시 성산구
+**권영길, 노회찬, 여영국**
 
+사민주의 정당, 특히 정의당에게 창원 성산이 가지는 의미는 매우 각별하다. 민주노총 초대 위원장인 권영길(2004~ 12)이 사민주의 정당의 첫 국회의원으로 당선된 곳이자, 노회찬(2016~ 18)이 정치인생의 마지막 지역구로 선택한 곳이기도 하다. 노회찬의 사망으로 발생한 2019년 보궐선거는 사민주의 정당에게는 반드시 이겨야 하는 선거였다. 단순한 의석 1석의 의미를 넘어서, 정의당에게는 권영길-노회찬의 뒤를 이을 능력을 증명하기 위해, 민중당에게는 사민주의 정당의 선두주자로 인정받고 지지를 확장하기 위해. 그리고 이 의미는 2020년 현재의 선거에서도 전혀 변함이 없다. 
 
 #### 울산 동구, 북구
+**사민주의 정당과 민주노총**
 
+울산 동구와 북구에서 2016년에 당선된 두 명의 무소속 국회의원(김종훈, 윤종오)은 모두 민주노총이 주도하는 "노동자후보 단일화"를 통해 정의당 및 노동당 후보들과 단일화에 성공했고, 민주당계 정당 후보까지 단일화에 참여하게 만들었다. 결국 보수주류 정당 후보와의 1:1 구도를 만들고 당선되었다. 노동조합을 통해 조직된 생산직 노동자가 가장 밀집된 울산(6권 ‘남부지방 권역’, p.XXX 참고)에서는 이처럼 "노동자를 대표하는 국회의원"을 당선시켜서 정치세력화하려는 움직임이 언제나 있었다. 과거 민주노동당-통합진보당 소속이었던 김종훈과 윤종오는 당선 이후 민중당을 창당하였고, 이후 정의당, 노동당과의 경쟁과 연대를 통해 사민주의 정당 전체의 세를 확장하는 데에 나서기도 했다. 
 
 #### 경기 안양시 동안구 을, 경북 경주시
+**지역구 좀 가지게 해주세요**
 
+지역구 당선자를 배출하는 것은 사민주의 정당의 오랜 숙원이다. 그 지역이 사민주의 정당의 새로운 지지기반이 될 수도 있을 뿐만 아니라, 의정활동 경험을 쌓은 당내 국회의원을 육성하려면 비례대표 국회의원이 (관례상 다음 선거에 비례대표로 출마하지 않기 때문에) 다음 선거의 지역구에서 당선되어 돌아와야 하기 때문이다. 사민주의 정당의 비례대표 의원들은 승산이 있거나 연고가 있는 지역구를 미리 지정하여 오래 전부터 지역기반을 다지기 마련이다. 물론 당선이 어렵기 때문에, 현역 의원이라도 한 번 지역구에서 낙선 이후 재도전하기란 쉽지 않다.
+
+이 관점에서 2020년 총선에서 특히 주목할 곳이 이 두 곳이다. 안양 동안 을에서는 정의당이 2회 연속으로 현역 국회의원(2016년 정진후, 2020년 추혜선)을 출마시켰고, 경주에서는 “용산 참사”(2009년 서울 용산에서 건물 철거를 반대하며 농성하던 세입자를 경찰이 진압하는 도중 화재가 발생해, 세입자 5명과 경찰 1명이 사망한 사건. 당시 서울지방경찰청장이 김석기, 이 사건의 유가족 변호인이 권영국이었다.) 유가족 변호인으로 보수주류 정당 후보를 저격하기 위해 2016년에 출마한 바 있는 권영국이 정의당에 입당하여 두 번째로 도전한다. 
 
 ## 극우정당 및 종교정당
 **대다수 유권자의 생각이 갑자기 변화하면, 이를 완강하게 거부하는 유권자에게는 ‘극우’라는 평가가 따라온다. 따라서 정치격변의 시기에는 극우의 몸집이 커지게 된다.**
@@ -182,7 +270,7 @@
 
 
 ### 자유공화당, 친박신당 - 친-박근혜 극우정당
-친-박근혜 극우정당의 기원은, 2017년 박근혜 대통령의 탄핵 직후 ‘대통령 탄핵무효 국민저항총궐기 운동본부’(약칭 ‘탄기국)가 창당한 `새누리당(보수주류 정당인 한나라당이 2012년에 이름을 바꾼 ‘원조’ 새누리당과 다르다.)`이었다. 그 급박한 상황에서도 현역 국회의원 조원진이 입당하여 2017년 대통령 선거 후보로 출마하였으며, 이후 치열한 당내 계파투쟁과 분당과 합당을 거듭했다. 그 와중에도 이들은 주말마다 전국 각지에서 대규모 태극기 집회를 조직하여, 당원들의 결속과 대외 영향력을 발휘하는 것으로 유명했다.
+친-박근혜 극우정당의 기원은, 2017년 박근혜 대통령의 탄핵 직후 ‘대통령 탄핵무효 국민저항총궐기 운동본부’(약칭 ‘탄기국’)가 창당한 `새누리당(보수주류 정당인 한나라당이 2012년에 이름을 바꾼 ‘원조’ 새누리당과 다르다.)`이었다. 그 급박한 상황에서도 현역 국회의원 조원진이 입당하여 2017년 대통령 선거 후보로 출마하였으며, 이후 치열한 당내 계파투쟁과 분당과 합당을 거듭했다. 그 와중에도 이들은 주말마다 전국 각지에서 대규모 태극기 집회를 조직하여, 당원들의 결속과 대외 영향력을 발휘하는 것으로 유명했다.
 
 2017년의 새누리당에서 기원한 정당은 2020년 현재 2개의 원내 정당으로 분화되었다. 자유공화당은 조원진 대표를 비롯하여, 별도의 창당을 준비하다가 2020년에 합당한 김문수, 전광훈, 그리고 보수주류 정당에서 공천 탈락 후 합류한 서청원, 김순례 등으로 구성되었다. 반대로 일찍이(2019) 보수주류 정당에서 탈당하고 합류했던 홍문종은 당내 주도권 다툼에서 밀려나자, 자유공화당에서 탈당하여 친박신당을 새로 창당한다. 
 
@@ -194,11 +282,24 @@
 ### 눈여겨볼 선거
 
 #### 대구 달서구 병
+**당대표님**
+
+친-박근혜 극우정당들은 2017년에 입당한 조원진(현 자유공화당 대표)에게 큰 빚을 지고 있다. 현역 국회의원이자 대선후보였던 그가 없었다면, 2017년 대선에서의 존재감도 보여주지 못하고, 국회의원 활동을 통한 정견발표나 의석수에 따라 할당된 정당 국고보조금을 받을 수도 없었을 것이고, 2018년 지방선거와 2019년 재보궐선거에서 박근혜 복권파의 중심세력으로 선거에 참여하여 결집할 수도 없었을지 모른다. 달리 말해, 그런 조원진이 2020년 총선에서 만약 낙선한다면, 이는 자유공화당을 비롯한 친-박근혜 극우정당 전체에 큰 타격이 될 것이다. 
+
+물론 그가 무력하게 낙선하지는 않을 것이다. 조원진은 달서 병에서 3선(2008~ )을 했는데, 그 중 첫 번째인 2008년에는 친박연대 소속으로 보수주류 정당(한나라당) 후보를 꺾으며 당선되었다.
+
 
 #### 경기 화성시 갑
+**한때 차기 국회의장님**
+
+한국에서는 국회의장을 뽑을 때, 국회에서 의석이 가장 많은 당의 원로 다선의원을 선출한다는 관례가 있다. 이 관점에서 보았을 때 2016-2020 국회의 가장 유력한 국회의장 후보는 서청원이었다. 2016년 총선 직전에는 과반의석이 당연하다고 예측되었던 새누리당(보수주류 정당)의 `8선 의원(서울 동작구 갑: 1981~ 85, 88~ 2004. 비례대표: 2008~ 09.경기 화성시 갑: 2013~ )`이고, 한나라당(보수주류 정당)과 친박연대 대표를 맡은 적 있는 거물이기 때문이었다. 그러나 새누리당은 참패했고, 박근혜 대통령 탄핵과 2018년 지방선거 참패까지 겹쳐서 (친-박근혜계로서) 서청원은 본인의 책임을 이유로 탈당하였다. 그가 2020년 총선을 앞두고, 재출마를 위해 자유공화당에 입당했다. 만약 그가 당선된다면 보수주류 정당이 바라보는 자유공화당의 입지는 생각보다 상당히 높아질 가능성이 있다. 
 
 #### 경북 김천시 (비례)
+**기독자유당의 향방**
 
+비례대표 정당투표를 놓고 보면, 기독자유당의 김천에서의 성적은 매우 특이했다. 2012년과 2016년 총선 사이에, 김천시의 보수주류 정당(새누리당) 득표율(2012년 73.31%, 2016년 57.49%)은 15.82%p나 하락했는데, 민주당계 정당(민주통합당, 더불어민주당) 득표율(2012년 12.65%, 2016년 11.72%)도 증가하지 않았다. 수치로만 보면, 새누리당에서 이탈한 지지층 대부분이 2016년의 신생정당인 국민의당(14.27%)과 기독자유당(6.66%)으로 흡수되었다. 김천시의 기독자유당 득표율은, 기독자유당으로 입당하여 비례대표로 출마했던 이윤석의 지역구인 전남 신안군(8.53%)과 무안군(7.53%) 다음으로 전국에서 가장 높은 수치였다. 
+
+김천에서의 결과를 이렇게 해석해보자. "새누리당의 지지층이 중도적인 제3세력 정당과 극우적 종교정당으로 갈라졌다." 그렇다면 기독자유당이 2016년 총선에서 얻은 최대치의 득표율(전국 득표율 2.63%)은 종교정당보다는 극우정당에 대한 지지였을 가능성이 있다. 어엿한 극우정당이 새로 생긴 상황에서, 이 지지율은 과연 종교정당에게 남아있을 것인가, 아니면 극우정당으로 이동할 것인가? 김천에서의 선거결과가 이를 확인하는 바로미터가 될 것이다. 
 
 
 ## 신진 원외 진보정당
@@ -234,7 +335,16 @@
 ### 눈여겨볼 선거
 
 #### 경기 과천시 (비례)
+**녹색과천**
+
+지금까지 녹색당(더 나아가, 신진 원외 진보정당의)의 유일한 선출직 공직자가 소속되었던 곳이 과천이었다. 녹색당이 과천에서 자리잡을 수 있었던 데에는 과천시 고유의 특징이 큰 영향을 끼친 것으로 보인다. 과천시는 정부과천청사가 건설됨과 동시에 중앙행정 기능을 담당하는 계획도시로 탄생했고, 특히나 시 면적의 약 90%를 차지하는 그린벨트와 공원이 완벽하게 지켜졌다. 이를 지켜내기 위한 도시민 차원의 환경운동, 그리고 이 운동을 실현하기 위한 지방자치 참여 등이 활발하여 녹색당이 자리잡기 상대적으로 수월했던 것으로 보인다. 
+
+이런 정치지형은 독특하게도 녹색당과 정의당이 지지율을 쌍끌이하는 방식으로 나타난다. 2016년 총선에서 두 정당은 과천에서 비례대표 정당득표율이 각각 5.6%, 11.8%였다. 녹색당은 전국에서 가장 높은 득표율을, 정의당은 경기도의 구·시·군 중 고양시 덕양구(신상정의 지역구) 다음으로 제일 높은 득표율을 기록한 것이다. 또한 두 당의 지역구 후보(녹색당 홍지숙, 정의당 김형탁)가 과천에서 기록한 득표율도 각각 4.8%, 4.6%로 상당히 높았다.
 
 #### 서울 은평구 을 (인포그래픽은 은평구 갑으로.)
+**기본소득당이 지역에서 살아남는다면**
 
+진보신당과 노동당 시절을 포함하여, 기본소득당이 가장 공을 들이는 지역기반은 서울 은평구다. 2012년과 2016년 총선에서 모두 은평 갑 지역구에 출마하였는데, 다른 당 후보와의 후보단일화 없이 독자적으로 4%대의 높은 득표율을 기록했다. 특히 2016년의 최승현 후보가 기록한 4.18%의 득표율은, 사민주의 정당과 신진 진보정당을 통틀어 서울에서 좌파 진보정당이 거둔 유일한 4%대 득표율이었다. 기본소득당이 신생정당으로서 지역기반이 거의 없고 기존 노동당 시절의 생산직 노동자 중심의 지역기반(울산, 경상남도 등)은 모두 노동당에 잔류한 상태에서, 기본소득당이 나름의 득표력을 발휘하는 지역구의 존재는 매우 매우 소중하다. 
+
+다만, 2020년에 기본소득당이 후보(신민주)를 공천한 지역구는 은평 갑이 아니라, 은평 을이다. 은평 갑의 현역의원이 된 더불어민주당 박주민(3권 ‘위원회와 주요 이슈(1)’, p.XXX 참고)이 가진 젊고 개혁적인 상징성이 기본소득당의 지지까지 흡수할 것을 우려해서, 공략할 지역구를 옮긴 것으로 추측된다. 
 
